HV-2072 Use the `Local` protocol to run the tests
actually more of a follow-up on HV-1975 Remove Security Manager usage